feat(service): implement business services for freelancer profile management